syntax = "proto3";

package transport_schema;

message Point {
  double x = 1;
  double y = 2;
}

message RgbFormat {
  bytes color_struct = 1;
  bool is_rgba = 2;
}

message StringFormat {
  string color_string = 1;
}

message Color {
  StringFormat string_format = 1;
  RgbFormat rgb_format = 2;
}

message RenderSettings {
  double width = 1;
  double height = 2;

  double padding = 3;

  double line_width = 4;
  double stop_radius = 5;

  int32 bus_label_font_size = 6;
  Point bus_label_offsets = 7;

  int32 stop_label_font_size = 8;
  Point stop_label_offsets = 9;

  Color underlayer_color = 10;
  double underlayer_width = 11;

  repeated Color color_palette = 12;
}
